Fix some css layout issues

--- a/packages/client/faraday-client/src/components/RSB/Footer/Footer.module.css
+++ b/packages/client/faraday-client/src/components/RSB/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  grid-area: "footer";
+  grid-area: footer;
   background-color: rgb(149, 231, 133);
   height: 3rem;
 }
